[package]
name = "csv-migration-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
csv = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
